--- a/NanoSilicium/NanoSilicium.csproj
+++ b/NanoSilicium/NanoSilicium.csproj
@@ -309,18 +309,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\AniInstancing\Example\Scripts\showFPS.cs" />
-    <Compile Include="Assets\AniInstancing\Example\Scripts\TestInstancing.cs" />
-    <Compile Include="Assets\AniInstancing\Example\TestProject2\Scripts\RandomCharacters.cs" />
-    <Compile Include="Assets\AniInstancing\Example\TestProject2\Scripts\Spawner.cs" />
-    <Compile Include="Assets\AniInstancing\Example\TestProject2\Scripts\ThirdPersonCamera.cs" />
-    <Compile Include="Assets\AniInstancing\Scripts\AnimationInfo.cs" />
-    <Compile Include="Assets\AniInstancing\Scripts\AnimationInstancing.cs" />
-    <Compile Include="Assets\AniInstancing\Scripts\AnimationInstancingMgr.cs" />
-    <Compile Include="Assets\AniInstancing\Scripts\AnimationManager.cs" />
-    <Compile Include="Assets\AniInstancing\Scripts\EventReceiver.cs" />
-    <Compile Include="Assets\AniInstancing\Scripts\runtimeHelper.cs" />
-    <Compile Include="Assets\AniInstancing\Scripts\Singleton.cs" />
     <Compile Include="Assets\Oculus\AudioManager\Scenes\Scripts\TestScript.cs" />
     <Compile Include="Assets\Oculus\AudioManager\Scripts\Audio\AmbienceEmitter.cs" />
     <Compile Include="Assets\Oculus\AudioManager\Scripts\Audio\AudioManager.cs" />
@@ -741,14 +729,10 @@
     <Compile Include="Assets\PostProcessing\Runtime\Utils\MaterialFactory.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Utils\RenderTextureFactory.cs" />
     <Compile Include="Assets\PostProcessing\Utilities\CustomMotionTexture\ExampleWheelController.cs" />
-    <Compile Include="Assets\Script\ControllerKeyboard.cs" />
-    <Compile Include="Assets\Script\GPUBoid.cs" />
-    <Compile Include="Assets\Script\GPUFlock.cs" />
-    <Compile Include="Assets\Script\IntestinsController.cs" />
-    <Compile Include="Assets\Script\IntestinsManager.cs" />
-    <Compile Include="Assets\Script\PathTransform.cs" />
-    <Compile Include="Assets\Script\Poumons.cs" />
-    <Compile Include="Assets\Script\RotateForDemo.cs" />
+    <Compile Include="Assets\Scripts\ControllerKeyboard.cs" />
+    <Compile Include="Assets\Scripts\GPUBoid.cs" />
+    <Compile Include="Assets\Scripts\GPUFlock.cs" />
+    <Compile Include="Assets\Scripts\PathTransform.cs" />
     <Compile Include="Assets\SteamVR\Extras\SteamVR_GazeTracker.cs" />
     <Compile Include="Assets\SteamVR\Extras\SteamVR_LaserPointer.cs" />
     <Compile Include="Assets\SteamVR\Extras\SteamVR_Teleporter.cs" />
@@ -1230,15 +1214,6 @@
     <None Include="Assets\PostProcessing\Resources\Shaders\Uber.shader" />
     <None Include="Assets\PostProcessing\Resources\Shaders\UberSecondPass.cginc" />
     <None Include="Assets\PostProcessing\Utilities\CustomMotionTexture\Shaders\CustomMotionVectorTexture.shader" />
-    <None Include="Assets\Shaders\AnimationInstancingBase.cginc" />
-    <None Include="Assets\Shaders\InstancingOrgan.shader" />
-    <None Include="Assets\Shaders\Mobile-BumpSpec_instancing.shader" />
-    <None Include="Assets\Shaders\Normal-BumpSpecinstancing.shader" />
-    <None Include="Assets\Shaders\Normal-DiffuseInstancing.shader" />
-    <None Include="Assets\Shaders\PoumonsSwim.shader" />
-    <None Include="Assets\Shaders\UnityStandardCoreCustom.cginc" />
-    <None Include="Assets\Shaders\UnityStandardCoreForwardCustom.cginc" />
-    <None Include="Assets\Shaders\UnityStandardCoreForwardSimpleCustom.cginc" />
     <None Include="Assets\SteamVR\InteractionSystem\Core\Shaders\SeeThru.shader" />
     <None Include="Assets\SteamVR\InteractionSystem\Core\Shaders\Silhouette.shader" />
     <None Include="Assets\SteamVR\InteractionSystem\Hints\Shaders\ControllerButtonHints.shader" />
