--- a/NanoSilicium/Unity.PackageManagerUI.Editor.csproj
+++ b/NanoSilicium/Unity.PackageManagerUI.Editor.csproj
@@ -521,6 +521,7 @@
     <None Include="Assets\PostProcessing\Resources\Shaders\Uber.shader" />
     <None Include="Assets\PostProcessing\Resources\Shaders\UberSecondPass.cginc" />
     <None Include="Assets\PostProcessing\Utilities\CustomMotionTexture\Shaders\CustomMotionVectorTexture.shader" />
+    <None Include="Assets\Shader\DoubleSided.shader" />
     <None Include="Assets\Shader\Refraction.shader" />
     <None Include="Assets\SteamVR\InteractionSystem\Core\Shaders\SeeThru.shader" />
     <None Include="Assets\SteamVR\InteractionSystem\Core\Shaders\Silhouette.shader" />
